<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">실시간 핫이슈</string>

<string name="voice">QR 코드 읽기</string>
<string name="font_size">글씨 크기 변경</string>
<string name="font_size_msg">글씨 크기를 변경합니다</string>
<string name="naver">네이버</string>
<string name="daum">다음 </string>
<string name="google">구글 </string>
<string name="zum">줌  </string>
<string name="nate">네이트 </string>

<string name="present">현재 </string>
<string name="widget_settings">변경후에는 위젯을 다시 생성하세요.</string>
<string name="transparent_setup">투명위젯</string>
<string name="transparent_setup_msg">위젯 배경을 투명으로 만듭니다.</string>
<string name="interval_setup">업데이트주기 </string>
<string name="interval_setup_msg">위젯 업데이트 주기를 설정합니다.</string>
<string name="wait">로딩중입니다. 잠시후 다시 시도하세요</string>
<string name="app_download">실시간핫이슈 어플 다운로드 </string>
<string name="app_link">http://market.android.com/details?id=com.blogspot.imapp.imhotissue</string>
<string name="naver_setup">네이버</string>
<string name="naver_setup_msg">위젯에서 네이버를 표시합니다.</string>
<string name="daum_setup">다음  </string>
<string name="daum_setup_msg">위젯에서 다음을 표시합니다.</string>
<string name="google_setup">구글  </string>
<string name="google_setup_msg">위젯에서 구글을 표시합니다.</string>
<string name="nate_setup">네이트  </string>
<string name="nate_setup_msg">위젯에서 네이트를 표시합니다.</string>
<string name="zum_setup">줌  </string>
<string name="zum_setup_msg">위젯에서 줌을 표시합니다.</string>
<string name="widget_one">위젯 사이트를 한개 이상 선택해야 합니다.</string>
<string name="flip_interval_setup">위젯 스크롤 주기 </string>
<string name="flip_interval_setup_msg">위젯 스크롤 주기를 설정합니다.</string>
<string name="count">조회수 %1s</string>
<string name="rank">순위 %1s</string>
<string name="favorite_msg">검색어 항목을 길게 누르시면 즐겨찾기에 추가하실 수 있습니다. 삭제하실때도 즐겨찾기 항목을 길게 누르시면 됩니다.</string>
<string name="add_favorite">즐겨찾기에 추가하시겠습니까?</string>
<string name="favorite_added">즐겨찾기에 추가되었습니다.</string>
<string name="del_favorite">즐겨찾기에서 삭제하시겠습니까?</string>
<string name="favorite_deleted">즐겨찾기에서 삭제되었습니다.</string>
<string name="network_error">연결 시간 초과 !</string>
<string name="retry">다시시도</string>
<string name="keywords_setup">검색어 설정 </string>
<string name="keywords_setup_msg">알림받기를 원하는 검색어를 입력하세요.</string>
<string name="search_setup">순위 진입 알림 </string>
<string name="search_setup_msg">검색어가 순위에 진입하면 알려줍니다. 위젯이 설치되어 있어야 동작합니다.</string>
<string name="search_again_msg">%1s 을(를) 다시 알리시겠습니까?</string>
<string name="reload_widget">위젯 재생성</string>
<string name="widget_reloaded">위젯 재생성-위젯이 간혹 멈추는 경우 사용하세요.</string>
<string name="widget_text_color_msg">위젯의 검색어 색상을 바꿉니다</string>
<string name="widget_text_color">위젯 검색어 색상</string>
<string name="location_msg">이 어플이 위치서비스를 사용합니다</string>
<string name="qrcode">사각형 영역을 QR코드나 바코드에 맟추세요</string>
<string name="qrcode_success">인식을 성공하였습니다.</string>

<string name="rate_setup_msg">마음에 드시면 별5개 평가 부탁합니다</string>
<string name="rate_setup">평가하기</string>
<string name="refresh">갱신</string>    
<string name="networkError">네트워크 오류</string>
<string name="blog_setup">블로그...</string>
<string name="blog_setup_msg">개발자 블로그 방문</string>
<string name="color_pick">색상을 선택하세요</string>
<string name="other_app_setup">다른 앱 보기...</string>
<string name="other_app_setup_msg">개발자가 개발한 다른 앱을 검색합니다.</string>
<string name="release_setup">공지사항...</string>
<string name="release_setup_msg">이 앱의 공지사항을 봅니다</string>
<string name="timeout">접속시간초과</string>
<string name="confirm_delete_msg">파일을 삭제 하시겠습니까?</string>
<string name="files_deleted">파일이 삭제되었습니다.</string>
<string name="no_file_deleted">파일이 삭제되지 않았습니다.</string>
<string name="sd_not_enough_error">SD 카드 용량이 부족합니다.</string>
<string name="sd_error">SD 카드를 사용할 수 없습니다.</string>
<string name="unknown_error">알수없는 오류 다시 시도해 주세요.</string>
<string name="error_occured">오류발생</string>
<string name="select_all">전체선택</string>
<string name="deselect_all">전체선택해제</string>
<string name="setup">설정</string>
<string name="play">재생</string>
<string name="delete">삭제</string>
<string name="delete_selected">선택 삭제</string>
<string name="title">제목</string>
<string name="close">닫기</string>
<string name="up">위로</string>
<string name="down">아래로</string>
<string name="ok">확인</string>
<string name="cancel">취소</string>
<string name="yes">예</string>
<string name="no">아니오</string>
<string name="add">추가</string>
<string name="share">공유</string>
    

<!-- socialize strings -->
	<string name="socialize_comment_slider_title">댓글쓰기 </string>
	<string name="socialize_comment_button_add">확인 </string>
	<string name="socialize_comment_smartalerts_unsubscribe">구독취소 </string>
	<string name="socialize_comment_smartalerts_subscribe">구독하기 </string>
	<string name="socialize_comment_smartalerts_subscribed_yes">구독이 취소됩니다.</string>
	<string name="socialize_comment_smartalerts_subscribed_willnotify">댓글을 받으면 알림이 전송됩니다.</string>
	<string name="socialize_comment_smartalerts_subscribed_no">알림전송이 취소됩니다.</string>
	<string name="socialize_comment_smartalerts_subscribe_ask">구독을 누르시면 알림이 전송됩니다.</string>
	<string name="socialize_comment_hint">댓글쓰기 ...</string>
	<string name="socialize_comment_dialog">댓글 올리기 </string>
	<string name="socialize_smartalerts_enabled">푸쉬알림 허용 </string>
	<string name="socialize_smartalerts_disabled">푸쉬알림 금지 </string>
	<string name="socialize_button_continue">계속 </string>
	<string name="socialize_button_close">닫기 </string>
	<string name="socialize_button_cancel">취소 </string>
	<string name="socialize_settings_button_edit">사용자 정보 변경 </string>
	<string name="socialize_settings_button_save">저장 </string>
	<string name="socialize_settings_header">설정 </string>
	<string name="socialize_settings_label_firstname">이름 </string>
	<string name="socialize_settings_label_lastname">성 </string>
	<string name="socialize_settings_label_picture">사진 </string>
	<string name="socialize_settings_dialog">정보 저장 </string>
	<string name="socialize_twitter_name">트위터 </string>
	<string name="socialize_twitter_button_signout">트위터 로그아웃 </string>
	<string name="socialize_twitter_button_signin">트위터 로그인 </string>
	<string name="socialize_twitter_autopost">트윗 전송</string>
	<string name="socialize_facebook_name">페이스북 </string>
	<string name="socialize_facebook_button_signout">페이스북 로그아웃 </string>
	<string name="socialize_facebook_button_signin">페이스북 로그인 </string>
	<string name="socialize_facebook_autopost">페이스북 전송 </string>
	<string name="socialize_location_shared">지역 알림 허용</string>
	<string name="socialize_location_notshared">지역 알림 금지 </string>
	<string name="socialize_location_enabled">지역 알림 허용 </string>
	<string name="socialize_location_disabled">지역 알림 금지 </string>
	<string name="socialize_share_label_email">Email</string>
	<string name="socialize_share_label_sms">SMS</string>
	<string name="socialize_share_label_googleplus">Google+ 써클</string>
	<string name="socialize_share_label_remember">항상 선택한 소셜에 전송 허용 </string>
	<string name="socialize_share_label_forget">다시 묻지 않기 </string>
	<string name="socialize_share_more_options">더 보기...</string>
	<string name="socialize_share_header">보내기...</string>
	<string name="socialize_share_dialog">공유 </string>
	<string name="socialize_share_dialog_message">다음으로 공유 </string>
	<string name="socialize_actionbar_label_comment">댓글 </string>
	<string name="socialize_actionbar_label_share">공유 </string>
	<string name="socialize_actionbar_label_like">좋아요 </string>
	<string name="socialize_actionbar_label_unlike">싫어요 </string>
	<string name="socialize_actionbar_toast_sharefail">공유실패! 다시 시도해 주세요.</string>
	<string name="socialize_actionbar_toast_sharesuccess">공유 성공.</string>
	<string name="socialize_loading">로드중...</string>
	<string name="socialize_please_wait">잠시만 기다려 주세요...</string>
	<string name="socialize_date_day">일 전</string>
	<string name="socialize_date_day_plural">일 전 </string>
	<string name="socialize_date_month">달 전 </string>
	<string name="socialize_date_month_plural">달 전 </string>
	<string name="socialize_date_justnow">방금 </string>
	<string name="socialize_year_ago">1년전 </string>
	<string name="socialize_date_hour">1시간전 </string>
	<string name="socialize_date_hour_plural">몇시간 전</string>
	<string name="socialize_date_minute">몇분 전 </string>
	<string name="socialize_date_minute_plural">몇분 전</string>
	<string name="socialize_auth_required">인증이 필요합니다.</string>
	<string name="socialize_auth_rathernot">안할래요...</string>
	<string name="socialize_auth_anonymous">익명 사용자 입니다.</string>
	<string name="socialize_auth_message">위의 서비스로 인증하기</string>
	<string name="socialize_auth_header">댓글 올리기 위해 로그인</string>
	<string name="socialize_auth_dialog">인증 </string>
	<string name="socialize_auth_dialog_message">인증중...</string>
	<string name="socialize_auth_dialog_sign_out">로그아웃 </string>	

	<string name="event">이벤트 </string>
	<string name="fbid">208591119277305</string>
	
</resources>
